Convert DI devices to POJOs
- Add docs and introduce RawGamepad record
- Also: Cleanup packages and start to prime the codebase for more than just playground purposes